# Synapse-Network-Sdk

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  llm-instructions.md  llms.txt
.agents-memory/: onboarding-state.json
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_request.md  feature_request.md
.github/instructions/: agents-memory-bridge.instructions.md
.github/workflows/: ci.yml  pr-ci.yml  publish-sdk.yml
docs/: README.md  quality-gates.md
docs/agent-map/: README.md  index.json
docs/guides/: getting-started.md
docs/ops/: README.md  SDK_Python_Local_Development.md  release-checklist.md  sdk-release-runbook.md
docs/plans/: bootstrap-checklist.md  refactor-watch.md
docs/sdk/: README.md  README.zh-CN.md  api-parity-matrix.md  capability_inventory.md  dotnet_integration.md  go_integration.md  java_integration.md  python_integration.md  python_provider_integration.md  typescript_integration.md  typescript_provider_integration.md
docs/test/: consumer-e2e-plan.md  python-consumer-cold-start-e2e-plan.md  python-provider-onboarding-e2e-plan.md  typescript-provider-onboarding-e2e-plan.md
go/: go.mod  go.sum
go/synapse/: auth.go  auth_test.go  client.go  client_test.go  control_models.go  provider_control.go
java/: pom.xml
java/examples/: pom.xml
python/: README.md  pyproject.toml
python/examples/: consumer_call_provider.py  consumer_wallet_to_invoke.py  e2e.py  free_service_smoke.py  llm_smoke.py  provider_staging_onboarding.py  smoke_test.py
python/synapse_client/: __init__.py  _auth_credentials.py  _auth_finance.py  _auth_provider_control.py  _control_result_models.py  auth.py  client.py  config.py  exceptions.py  models.py  provider.py  wallet.py
python/synapse_client/test/: test_auth_unit.py  test_client_unit.py  test_consumer_e2e.py  test_provider_e2e.py  test_provider_facade_unit.py
typescript/: .jscpd.json  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.examples.json  tsconfig.json
(+78 files in other folders)
