[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-client"
version = "0.1.0"
description = "Official Synapse Network Client SDK for Service Discovery and Invocation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Synapse Network Team" }
]
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "build>=1.4.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["synapse_client*"]
exclude = ["provider_api*", "examples*", "venv*", "__pycache__*"]
