[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-client"
version = "0.1.0"
description = "Official Synapse Network Client SDK for Service Discovery and Invocation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Synapse Network Team" }
]
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "build>=1.4.0",
  "eth-account>=0.13.0",
  "web3>=7.0.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.0",
  "mypy>=1.20.0",
  "radon>=6.0.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["synapse_client*"]
exclude = ["provider_api*", "examples*", "venv*", "__pycache__*", "synapse_client.test*"]

[tool.pytest.ini_options]
markers = [
  "e2e: marks live end-to-end gateway + chain integration tests",
]

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = ["python/.venv", "python/build", "python/dist"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
allow_untyped_defs = true
no_implicit_optional = false
warn_return_any = false
warn_unused_ignores = true
exclude = ["python/synapse_client/test/"]
disable_error_code = ["attr-defined", "override", "arg-type"]
